Fix wrapping on info section

--- a/style.css
+++ b/style.css
@@ -115,7 +115,6 @@ button {
 .info {
     display: flex;
     align-items: center;
-    flex-basis: 800px;
     flex-direction: column;
     gap: 32px;
 }
@@ -124,6 +123,7 @@ button {
     display: flex;
     gap: 16px;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .feature {
@@ -132,6 +132,7 @@ button {
     flex-direction: column;
     text-align: center;
     gap: 16px;
+    flex-basis: 200px;
 }
 
 .image {
